# ceylongrid

./: .env.example  .gitignore  .mergify.yml  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
ingestion/: .env.example  Cargo.toml
ingestion/src/: db.rs  main.rs  models.rs
ingestion/src/sources/: ada_derana.rs  fx_rate.rs  mod.rs  usgs.rs
src/app/: globals.css  layout.tsx
src/app/grid/: page.tsx
src/app/pulse/: page.tsx
src/app/wire/: page.tsx
src/components/layout/: AppShell.tsx  NavBar.tsx  ViewSwitcher.tsx
src/components/map/: DistrictMap.tsx
src/components/pulse/: PulsePlaceholder.tsx
src/components/wire/: WireFeed.tsx  WireFilters.tsx  WireItem.tsx
src/lib/: constants.ts
src/types/: index.ts
supabase/migrations/: 0001_init.sql
