[package]
name = "ceylongrid-ingestion"
version = "0.1.0"
edition = "2021"
description = "CeylonGrid — concurrent data ingestion service for Sri Lanka signals"

[[bin]]
name = "ingestion"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio-cron-scheduler = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
